@@ -7,6 +7,7 @@ import (
 	"encoding/hex"
 	"fmt"
 	"os"
+	"regexp"
 	"strconv"
 	"strings"
 	"time"
@@ -159,7 +160,9 @@ func make_wallet() {
 	}
 
 	if bip39wrds != 0 {
-		if bip39wrds < 12 || bip39wrds > 24 || (bip39wrds%3) != 0 {
+		if bip39wrds == -1 {
+			fmt.Println("The seed password is considered to be BIP39 mnemonic")
+		} else if bip39wrds < 12 || bip39wrds > 24 || (bip39wrds%3) != 0 {
 			println("ERROR: Incorrect value for BIP39 words count", bip39wrds)
 			os.Exit(1)
 		}
@@ -192,24 +195,49 @@ func make_wallet() {
 		sys.ClearBuffer(pass)
 	} else /*if waltype==4*/ {
 		if bip39wrds != 0 {
-			hd_wallet_xtra = append(hd_wallet_xtra, fmt.Sprint("Based on ", bip39wrds, " BIP39 words"))
-			s := sha256.New()
-			s.Write(pass)
-			s.Write([]byte("|gocoin|"))
-			s.Write(pass)
-			s.Write([]byte{byte(bip39wrds / 3 * 32)})
-			seed_key = s.Sum(nil)
-			sys.ClearBuffer(pass)
-			mnemonic, er := bip39.NewMnemonic(seed_key[:(bip39wrds/3)*4])
-			sys.ClearBuffer(seed_key)
-			if er != nil {
-				println(er.Error())
-				cleanExit(1)
+			var er error
+			var mnemonic string
+			if bip39wrds == -1 {
+				mnemonic = strings.ToLower(string(pass))
+				sys.ClearBuffer(pass)
+				re := regexp.MustCompile("[^a-z]")
+				a := re.ReplaceAll([]byte(mnemonic), []byte(" "))
+				lns := strings.Split(string(a), " ")
+				mnemonic = ""
+				for _, l := range lns {
+					if l != "" {
+						if mnemonic != "" {
+							mnemonic = mnemonic + " " + l
+						} else {
+							mnemonic = l
+						}
+					}
+				}
+			} else {
+				hd_wallet_xtra = append(hd_wallet_xtra, fmt.Sprint("Based on ", bip39wrds, " BIP39 words"))
+				s := sha256.New()
+				s.Write(pass)
+				s.Write([]byte("|gocoin|"))
+				s.Write(pass)
+				s.Write([]byte{byte(bip39wrds / 3 * 32)})
+				seed_key = s.Sum(nil)
+				sys.ClearBuffer(pass)
+				mnemonic, er = bip39.NewMnemonic(seed_key[:(bip39wrds/3)*4])
+				sys.ClearBuffer(seed_key)
+				if er != nil {
+					println(er.Error())
+					cleanExit(1)
+				}
 			}
 			if *dumpwords {
 				fmt.Println("BIP39:", mnemonic)
 			}
 			seed_key, er = bip39.NewSeedWithErrorChecking(mnemonic, "")
+			sys.ClearBuffer([]byte(mnemonic))
+			if er != nil {
+				println(er.Error())
+				cleanExit(1)
+			}
 			hdwal = btc.MasterKey(seed_key, testnet)
 			sys.ClearBuffer(seed_key)
 		} else {
